2001-07-23  Martin Baulig  <baulig@suse.de>

	* bonobo/bonobo-widget.c (bonobo_widget_construct_control):
	`bw->priv->server' is already a CORBA_Object, don't call
	BONOBO_OBJREF on it.

2001-07-23  Martin Baulig  <baulig@suse.de>

	* bonobo/bonobo-ui-engine.c (BonoboUIEngineClass): Added
	"destroy" signal.

	* bonobo/bonobo-ui-container.c
	(bonobo_ui_container_set_engine): Connect to the engine's
	"destroy" signal.

2001-07-22  Martin Baulig  <baulig@suse.de>

	* bonobo/bonobo-ui-xml.c (bonobo_ui_xml_strip): Removed.
	(bonobo_ui_xml_merge): Don't call bonobo_ui_xml_strip.

2001-07-22  Mike Kestner  <mkestner@speakeasy.net>

	* configure.in : produce the samples Makefiles.
	* libbonoboui.h : kill the removed header files.
	* bonobo/Makefile.am : remove the cs, view, vframe, and embed files.
	* bonobo/bonobo-embeddable.[ch]:
	* bonobo/bonobo-client-site.[ch]:
	* bonobo/bonobo-view.[ch]:
	* bonobo/bonobo-view-frame.[ch]:
		killed.

	* bonobo/bonobo-canvas-item.c : switch from embeddable prop to a
	CanvasComponentFactory property.
	* bonobo/bonobo-widget.c : removed the subdoc functions.
	* samples/Makefile.am : activate the compound-doc build
	* samples/compound-doc/Makefile.am : activate container build

2001-07-22  Joe Shaw  <joe@ximian.com>

	* bonobo/bonobo-ui-sync-status.c (bonobo_ui_sync_status_new): Use
	the GObject signal functions since BonoboUIEngine is a GObject now.

2001-07-21  Dan Damian  <dand@dnttm.ro>

	* libbonoboui.h: changed reference from bonobo-win.h
	to bonobo-window.h

	* bonobo/bonobo-window.h: ditto.
	
2001-07-20  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-engine.c (PARENT_TYPE): make it inherit
	from a GObject since the structures do: doh.

	* bonobo/bonobo-window.c (destroy_priv): g_object_unref
	the BonoboUIEngine, not gtk_object_unref.

	* bonobo/bonobo-ui-toolbar-item.c (impl_destroy): protect
	against double destroys - these seem to happen; argh.

	* bonobo/bonobo-canvas-component.c (rih_destroy): ditto.
