@@ -1,5 +1,15 @@
 2001-07-23  Martin Baulig  <baulig@suse.de>
 
+	* bonobo/bonobo-ui-engine-config.[ch]: Ported to GObject.
+
+	* bonobo/bonobo-ui-sync.[ch]: Ported to GObject.
+	* bonobo/bonobo-ui-sync-keys.[ch]: Ported to GObject.
+	* bonobo/bonobo-ui-sync-menus.[ch]: Ported to GObject.
+	* bonobo/bonobo-ui-sync-toolbar.[ch]: Ported to GObject.
+	* bonobo/bonobo-ui-sync-status.[ch]: Ported to GObject.
+
+2001-07-23  Martin Baulig  <baulig@suse.de>
+
 	* bonobo/bonobo-widget.c (bonobo_widget_construct_control):
 	`bw->priv->server' is already a CORBA_Object, don't call
 	BONOBO_OBJREF on it.
